--- a/ThreatDragonModels/CSSECDEV - Quiz 2: DFD For Simple Web Application/CSSECDEV - Quiz 2: DFD For Simple Web Application.json
+++ b/ThreatDragonModels/CSSECDEV - Quiz 2: DFD For Simple Web Application/CSSECDEV - Quiz 2: DFD For Simple Web Application.json
@@ -5,6 +5,12 @@
   },
   "detail": {
     "contributors": [],
-    "diagrams": []
+    "diagrams": [
+      {
+        "title": "DFD For Simple Web Application",
+        "thumbnail": "./public/content/images/thumbnail.jpg",
+        "id": 0
+      }
+    ]
   }
 }
